prevent jumping timer

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
     font-size: 14px;
+    font-variant-numeric: tabular-nums;
     margin: 0px;
     height: 715;
     width: 331;
@@ -126,9 +127,9 @@ main {
 }
 
 .max-value-lap {
-    color : red;
+    color : var(--max-value-lap-font-color);
 }
 
 .min-value-lap {
-    color : green;
+    color : var(--min-value-lap-font-color);
 }
